--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
                              <li class="menu-mobile-list-item">
                             <a href="#">Blog</a>
                           </li>
-                            <button class="btn-reg" href="#">Sing Up</button>
+                          <li class="menu-mobile-list-item">
+                            <a class="btn-reg" href="#">Sing Up</a>
+                          </li>
                         </ul>
-                      </nav>
+                        </nav>
                     <button class="registration-btn">Sign Up</button>
                 </div> 
             </div>
@@ -74,9 +76,9 @@
                     <p class="top-txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi aliquet volutpat pellentesque volutpat est. <span class="mobile-txt">Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam.</span></p>
                     <button class="top-btn">Try for free</button>
                 </section>
-                <section class="top-content-img">
+                <div class="top-content-img">
                     <div class="top-content-photo"></div>
-                </section>
+                </div>
             </div>
     </div>
 <main>
@@ -278,7 +280,7 @@
                 <li class="footer-nav-item"><a class="footer-nav-link" href="#">Blog</a></li>
             </ul>
         </nav>
-        <section class="footer-social">
+        <div class="footer-social">
             <ul class="footer-social-list">
                     <li>
                         <div class="footer-social-item">
@@ -308,7 +310,7 @@
                     </div>
                 </li>
             </ul>
-        </section>
+        </div>
     </div>
 </footer>
 <script src="javascript/script.js"></script>
